--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.0",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
