--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development concurrently \"webpack serve --open\" \"nodemon server/server.js\""
+    "dev": "NODE_ENV=development concurrently \"webpack serve\" \"nodemon server/server.js\""
   },
   "keywords": [],
   "author": "",
