--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "react-query-devtools": "^2.6.3",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1"
   },
